// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Common.Help component props testing checkGrammar=false 1`] = `
<Link
  checkGrammar={false}
  className="uu5-common-help"
  content="UU5.Bricks.Button"
  href="https://uuos9.plus4u.net/uu-dockitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=UU5BricksButton"
  id="uuID-inner"
  mainAttrs={Object {}}
  target="_blank"
/>
`;

exports[`UU5.Common.Help component props testing checkGrammar=true 1`] = `
<Link
  checkGrammar={true}
  className="uu5-common-help"
  content="UU5.Bricks.Button"
  href="https://uuos9.plus4u.net/uu-dockitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=UU5BricksButton"
  id="uuID-inner"
  mainAttrs={Object {}}
  target="_blank"
/>
`;

exports[`UU5.Common.Help component props testing checkHighlight=false 1`] = `
<Link
  checkHighlight={false}
  className="uu5-common-help"
  content="UU5.Bricks.Button"
  href="https://uuos9.plus4u.net/uu-dockitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=UU5BricksButton"
  id="uuID-inner"
  mainAttrs={Object {}}
  target="_blank"
/>
`;

exports[`UU5.Common.Help component props testing checkHighlight=true 1`] = `
<Link
  checkHighlight={true}
  className="uu5-common-help"
  content="UU5.Bricks.Button"
  href="https://uuos9.plus4u.net/uu-dockitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=UU5BricksButton"
  id="uuID-inner"
  mainAttrs={Object {}}
  target="_blank"
/>
`;

exports[`UU5.Common.Help component props testing checkSpaces=false 1`] = `
<Link
  checkSpaces={false}
  className="uu5-common-help"
  content="UU5.Bricks.Button"
  href="https://uuos9.plus4u.net/uu-dockitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=UU5BricksButton"
  id="uuID-inner"
  mainAttrs={Object {}}
  target="_blank"
/>
`;

exports[`UU5.Common.Help component props testing checkSpaces=true 1`] = `
<Link
  checkSpaces={true}
  className="uu5-common-help"
  content="UU5.Bricks.Button"
  href="https://uuos9.plus4u.net/uu-dockitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=UU5BricksButton"
  id="uuID-inner"
  mainAttrs={Object {}}
  target="_blank"
/>
`;

exports[`UU5.Common.Help component props testing className="my-classname" 1`] = `
<Link
  className="uu5-common-help my-classname"
  content="UU5.Bricks.Button"
  href="https://uuos9.plus4u.net/uu-dockitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=UU5BricksButton"
  id="uuID-inner"
  mainAttrs={Object {}}
  target="_blank"
/>
`;

exports[`UU5.Common.Help component props testing className="test-classname" 1`] = `
<Link
  className="uu5-common-help test-classname"
  content="UU5.Bricks.Button"
  href="https://uuos9.plus4u.net/uu-dockitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=UU5BricksButton"
  id="uuID-inner"
  mainAttrs={Object {}}
  target="_blank"
/>
`;

exports[`UU5.Common.Help component props testing content="This is Content from ContentMixin" 1`] = `
<Link
  className="uu5-common-help"
  content="This is Content from ContentMixin"
  href="https://uuos9.plus4u.net/uu-dockitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=UU5BricksButton"
  id="uuID-inner"
  mainAttrs={Object {}}
  target="_blank"
/>
`;

exports[`UU5.Common.Help component props testing content=12345 1`] = `
<Link
  className="uu5-common-help"
  content={12345}
  href="https://uuos9.plus4u.net/uu-dockitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=UU5BricksButton"
  id="uuID-inner"
  mainAttrs={Object {}}
  target="_blank"
/>
`;

exports[`UU5.Common.Help component props testing controlled=false 1`] = `
<Link
  className="uu5-common-help"
  content="UU5.Bricks.Button"
  href="https://uuos9.plus4u.net/uu-dockitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=UU5BricksButton"
  id="uuID-inner"
  mainAttrs={Object {}}
  target="_blank"
/>
`;

exports[`UU5.Common.Help component props testing controlled=true 1`] = `
<Link
  className="uu5-common-help"
  content="UU5.Bricks.Button"
  href="https://uuos9.plus4u.net/uu-dockitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=UU5BricksButton"
  id="uuID-inner"
  mainAttrs={Object {}}
  target="_blank"
/>
`;

exports[`UU5.Common.Help component props testing default props 1`] = `
<Link
  className="uu5-common-help"
  content="UU5.Bricks.Button"
  href="https://uuos9.plus4u.net/uu-dockitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=UU5BricksButton"
  id="uuID-inner"
  mainAttrs={Object {}}
  target="_blank"
/>
`;

exports[`UU5.Common.Help component props testing disabled=false 1`] = `
<Link
  className="uu5-common-help"
  content="UU5.Bricks.Button"
  href="https://uuos9.plus4u.net/uu-dockitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=UU5BricksButton"
  id="uuID-inner"
  mainAttrs={Object {}}
  target="_blank"
/>
`;

exports[`UU5.Common.Help component props testing disabled=false 3`] = `
<Link
  className="uu5-common-help"
  content="UU5.Bricks.Button"
  href="https://uuos9.plus4u.net/uu-dockitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=UU5BricksButton"
  id="uuID-inner"
  mainAttrs={Object {}}
  target="_blank"
/>
`;

exports[`UU5.Common.Help component props testing disabled=true 1`] = `
<Link
  className="uu5-common-help"
  content="UU5.Bricks.Button"
  disabled={true}
  href="https://uuos9.plus4u.net/uu-dockitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=UU5BricksButton"
  id="uuID-inner"
  mainAttrs={Object {}}
  target="_blank"
/>
`;

exports[`UU5.Common.Help component props testing disabled=true 3`] = `
<Link
  className="uu5-common-help"
  content="UU5.Bricks.Button"
  disabled={true}
  href="https://uuos9.plus4u.net/uu-dockitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=UU5BricksButton"
  id="uuID-inner"
  mainAttrs={Object {}}
  target="_blank"
/>
`;

exports[`UU5.Common.Help component props testing dynamic=false 1`] = `
<Link
  className="uu5-common-help"
  content="UU5.Bricks.Button"
  href="https://uuos9.plus4u.net/uu-dockitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=UU5BricksButton"
  id="uuID-inner"
  mainAttrs={Object {}}
  target="_blank"
/>
`;

exports[`UU5.Common.Help component props testing dynamic=true 1`] = `
<Link
  className="uu5-common-help"
  content="UU5.Bricks.Button"
  dynamic={true}
  href="https://uuos9.plus4u.net/uu-dockitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=UU5BricksButton"
  id="uuID-inner"
  mainAttrs={Object {}}
  target="_blank"
/>
`;

exports[`UU5.Common.Help component props testing elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<Link
  className="uu5-common-help"
  content="UU5.Bricks.Button"
  href="https://uuos9.plus4u.net/uu-dockitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=UU5BricksButton"
  id="uuID-inner"
  mainAttrs={Object {}}
  target="_blank"
/>
`;

exports[`UU5.Common.Help component props testing fullTextSearchPriority=0 1`] = `
<Link
  className="uu5-common-help uu-fulltextsearch-0"
  content="UU5.Bricks.Button"
  href="https://uuos9.plus4u.net/uu-dockitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=UU5BricksButton"
  id="uuID-inner"
  mainAttrs={Object {}}
  target="_blank"
/>
`;

exports[`UU5.Common.Help component props testing fullTextSearchPriority=0 2`] = `
<Link
  className="uu5-common-help uu-fulltextsearch-0"
  content="UU5.Bricks.Button"
  href="https://uuos9.plus4u.net/uu-dockitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=UU5BricksButton"
  id="uuID-inner"
  mainAttrs={Object {}}
  target="_blank"
/>
`;

exports[`UU5.Common.Help component props testing hidden=false 1`] = `
<Link
  className="uu5-common-help"
  content="UU5.Bricks.Button"
  href="https://uuos9.plus4u.net/uu-dockitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=UU5BricksButton"
  id="uuID-inner"
  mainAttrs={Object {}}
  target="_blank"
/>
`;

exports[`UU5.Common.Help component props testing hidden=false 3`] = `
<Link
  className="uu5-common-help"
  content="UU5.Bricks.Button"
  href="https://uuos9.plus4u.net/uu-dockitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=UU5BricksButton"
  id="uuID-inner"
  mainAttrs={Object {}}
  target="_blank"
/>
`;

exports[`UU5.Common.Help component props testing hidden=true 1`] = `
<Link
  className="uu5-common-help"
  content="UU5.Bricks.Button"
  hidden={true}
  href="https://uuos9.plus4u.net/uu-dockitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=UU5BricksButton"
  id="uuID-inner"
  mainAttrs={Object {}}
  target="_blank"
/>
`;

exports[`UU5.Common.Help component props testing hidden=true 3`] = `
<Link
  className="uu5-common-help"
  content="UU5.Bricks.Button"
  hidden={true}
  href="https://uuos9.plus4u.net/uu-dockitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=UU5BricksButton"
  id="uuID-inner"
  mainAttrs={Object {}}
  target="_blank"
/>
`;

exports[`UU5.Common.Help component props testing id="myId" 1`] = `
<Link
  className="uu5-common-help"
  content="UU5.Bricks.Button"
  href="https://uuos9.plus4u.net/uu-dockitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=UU5BricksButton"
  id="myId-inner"
  mainAttrs={Object {}}
  target="_blank"
/>
`;

exports[`UU5.Common.Help component props testing id="test-id" 1`] = `
<Link
  className="uu5-common-help"
  content="UU5.Bricks.Button"
  href="https://uuos9.plus4u.net/uu-dockitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=UU5BricksButton"
  id="test-id-inner"
  mainAttrs={Object {}}
  target="_blank"
/>
`;

exports[`UU5.Common.Help component props testing ignoreHTML=false 1`] = `
<Link
  className="uu5-common-help"
  content="UU5.Bricks.Button"
  href="https://uuos9.plus4u.net/uu-dockitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=UU5BricksButton"
  id="uuID-inner"
  mainAttrs={Object {}}
  target="_blank"
/>
`;

exports[`UU5.Common.Help component props testing ignoreHTML=true 1`] = `
<Link
  className="uu5-common-help"
  content="UU5.Bricks.Button"
  href="https://uuos9.plus4u.net/uu-dockitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=UU5BricksButton"
  id="uuID-inner"
  mainAttrs={Object {}}
  target="_blank"
/>
`;

exports[`UU5.Common.Help component props testing mainAttrs=undefined 1`] = `
<Link
  className="uu5-common-help"
  content="UU5.Bricks.Button"
  href="https://uuos9.plus4u.net/uu-dockitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=UU5BricksButton"
  id="uuID-inner"
  mainAttrs={Object {}}
  target="_blank"
/>
`;

exports[`UU5.Common.Help component props testing name="myName" 1`] = `
<Link
  className="uu5-common-help"
  content="UU5.Bricks.Button"
  href="https://uuos9.plus4u.net/uu-dockitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=UU5BricksButton"
  id="uuID-inner"
  mainAttrs={Object {}}
  name="myName-inner"
  target="_blank"
/>
`;

exports[`UU5.Common.Help component props testing nestingLevel="box" 1`] = `
<Link
  className="uu5-common-help"
  content="UU5.Bricks.Button"
  href="https://uuos9.plus4u.net/uu-dockitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=UU5BricksButton"
  id="uuID-inner"
  mainAttrs={Object {}}
  target="_blank"
/>
`;

exports[`UU5.Common.Help component props testing nestingLevel="inline" 1`] = `
<Link
  className="uu5-common-help"
  content="UU5.Bricks.Button"
  href="https://uuos9.plus4u.net/uu-dockitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=UU5BricksButton"
  id="uuID-inner"
  mainAttrs={Object {}}
  target="_blank"
/>
`;

exports[`UU5.Common.Help component props testing noPrint=false 1`] = `
<Link
  className="uu5-common-help"
  content="UU5.Bricks.Button"
  href="https://uuos9.plus4u.net/uu-dockitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=UU5BricksButton"
  id="uuID-inner"
  mainAttrs={Object {}}
  target="_blank"
/>
`;

exports[`UU5.Common.Help component props testing noPrint=true 1`] = `
<Link
  className="uu5-common-help"
  content="UU5.Bricks.Button"
  href="https://uuos9.plus4u.net/uu-dockitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=UU5BricksButton"
  id="uuID-inner"
  mainAttrs={Object {}}
  target="_blank"
/>
`;

exports[`UU5.Common.Help component props testing pureRender=false 1`] = `
<Link
  className="uu5-common-help"
  content="UU5.Bricks.Button"
  href="https://uuos9.plus4u.net/uu-dockitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=UU5BricksButton"
  id="uuID-inner"
  mainAttrs={Object {}}
  target="_blank"
/>
`;

exports[`UU5.Common.Help component props testing pureRender=true 1`] = `
<Link
  className="uu5-common-help"
  content="UU5.Bricks.Button"
  href="https://uuos9.plus4u.net/uu-dockitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=UU5BricksButton"
  id="uuID-inner"
  mainAttrs={Object {}}
  pureRender={true}
  target="_blank"
/>
`;

exports[`UU5.Common.Help component props testing selected=false 1`] = `
<Link
  className="uu5-common-help"
  content="UU5.Bricks.Button"
  href="https://uuos9.plus4u.net/uu-dockitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=UU5BricksButton"
  id="uuID-inner"
  mainAttrs={Object {}}
  target="_blank"
/>
`;

exports[`UU5.Common.Help component props testing selected=true 1`] = `
<Link
  className="uu5-common-help"
  content="UU5.Bricks.Button"
  href="https://uuos9.plus4u.net/uu-dockitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=UU5BricksButton"
  id="uuID-inner"
  mainAttrs={Object {}}
  selected={true}
  target="_blank"
/>
`;

exports[`UU5.Common.Help component props testing style="padding:8px; borderRadius: 2px" 1`] = `
<Link
  className="uu5-common-help"
  content="UU5.Bricks.Button"
  href="https://uuos9.plus4u.net/uu-dockitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=UU5BricksButton"
  id="uuID-inner"
  mainAttrs={Object {}}
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  target="_blank"
/>
`;

exports[`UU5.Common.Help component props testing style={"backgroundColor":"red","color":"blue"} 1`] = `
<Link
  className="uu5-common-help"
  content="UU5.Bricks.Button"
  href="https://uuos9.plus4u.net/uu-dockitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=UU5BricksButton"
  id="uuID-inner"
  mainAttrs={Object {}}
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  target="_blank"
/>
`;

exports[`UU5.Common.Help component props testing style={"margin":8} 1`] = `
<Link
  className="uu5-common-help"
  content="UU5.Bricks.Button"
  href="https://uuos9.plus4u.net/uu-dockitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=UU5BricksButton"
  id="uuID-inner"
  mainAttrs={Object {}}
  style={
    Object {
      "margin": 8,
    }
  }
  target="_blank"
/>
`;

exports[`UU5.Common.Help component props testing tagName="UU5.Bricks.Button" 1`] = `
<Link
  className="uu5-common-help"
  content="UU5.Bricks.Button"
  href="https://uuos9.plus4u.net/uu-dockitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=UU5BricksButton"
  id="uuID-inner"
  mainAttrs={Object {}}
  target="_blank"
/>
`;

exports[`UU5.Common.Help component props testing tagName="UU5.Bricks.Image" 1`] = `
<Link
  className="uu5-common-help"
  content="UU5.Bricks.Image"
  href="https://uuos9.plus4u.net/uu-dockitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=UU5BricksImage"
  id="uuID-inner"
  mainAttrs={Object {}}
  target="_blank"
/>
`;

exports[`UU5.Common.Help component props testing tagName="UU5.Bricks.Nonexisting" 1`] = `"UU5.Bricks.Nonexisting"`;

exports[`UU5.Common.Help component props testing target="_blank" 1`] = `
<Link
  className="uu5-common-help"
  content="UU5.Bricks.Button"
  href="https://uuos9.plus4u.net/uu-dockitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=UU5BricksButton"
  id="uuID-inner"
  mainAttrs={Object {}}
  target="_blank"
/>
`;

exports[`UU5.Common.Help component props testing target="_parent" 1`] = `
<Link
  className="uu5-common-help"
  content="UU5.Bricks.Button"
  href="https://uuos9.plus4u.net/uu-dockitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=UU5BricksButton"
  id="uuID-inner"
  mainAttrs={Object {}}
  target="_parent"
/>
`;

exports[`UU5.Common.Help component props testing target="_self" 1`] = `
<Link
  className="uu5-common-help"
  content="UU5.Bricks.Button"
  href="https://uuos9.plus4u.net/uu-dockitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=UU5BricksButton"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Common.Help component props testing target="_top" 1`] = `
<Link
  className="uu5-common-help"
  content="UU5.Bricks.Button"
  href="https://uuos9.plus4u.net/uu-dockitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=UU5BricksButton"
  id="uuID-inner"
  mainAttrs={Object {}}
  target="_top"
/>
`;

exports[`UU5.Common.Help component props testing textCorrector=false 1`] = `
<Link
  className="uu5-common-help"
  content="UU5.Bricks.Button"
  href="https://uuos9.plus4u.net/uu-dockitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=UU5BricksButton"
  id="uuID-inner"
  mainAttrs={Object {}}
  target="_blank"
  textCorrector={false}
/>
`;

exports[`UU5.Common.Help component props testing textCorrector=true 1`] = `
<Link
  className="uu5-common-help"
  content="UU5.Bricks.Button"
  href="https://uuos9.plus4u.net/uu-dockitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=UU5BricksButton"
  id="uuID-inner"
  mainAttrs={Object {}}
  target="_blank"
  textCorrector={true}
/>
`;

exports[`UU5.Common.Help component props testing tooltip="My Tooltip" 1`] = `
<Link
  className="uu5-common-help"
  content="UU5.Bricks.Button"
  href="https://uuos9.plus4u.net/uu-dockitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=UU5BricksButton"
  id="uuID-inner"
  mainAttrs={
    Object {
      "title": "My Tooltip",
    }
  }
  target="_blank"
  tooltip="My Tooltip"
/>
`;
